...
    <string name="app_name">Maréu</string>
    <string name="action_settings">Settings</string>
    <string name="empty_meeting">Pas de réunion pour le moment</string>
    <string name="subject">Sujet</string>
    <string name="participant">Participant(s)</string>
    <string name="participants">Participants</string>
    <string name="hour">Choisir lheure</string>
    <string name="date">Choisir la date</string>
    <string name="room">Salle</string>
    <string name="validate_my_meeting">Valider ma réunion</string>
    <string name="subjet_hour_date_room">Sujet + hour + date + room</string>

    <string name="room_alphabetical_asc_string">Croissant salle</string>
    <string name="room_alphabetical_dsc_string">Decroissant salle</string>
    <string name="date_asc_string">Croissant date</string>
    <string name="date_dsc_string">Decroissant date</string>
...
